# dobby-immo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
src/dobby_immo/: __init__.py  agent.py  bot.py  handlers.py  main.py  profile.py  protocols.py  settings.py  tools.py
src/dobby_immo/agent/: __init__.py  core.py  history.py  prompts.py
src/dobby_immo/telegram/: __init__.py  bot.py  handlers.py
src/dobby_immo/voice/: __init__.py  audio_convert.py  handler.py  speech.py  transcription.py
tests/: conftest.py  test_handlers.py  test_history.py  test_main.py  test_profile.py  test_settings.py  test_tools.py
tests/agent/: test_history.py  test_profile.py  test_tools.py
tests/telegram/: test_handlers.py
tests/voice/: test_voice_handler.py
